# OsmRoutingEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  example_map_data.osm
RoutingEngine/: CMakeLists.txt  RoutingEngine.cpp  RoutingEngine.h
RoutingEngine/ContractionHierarchies/: CMakeLists.txt
RoutingEngine/ContractionHierarchies/include/: BidirectionalSearch.h  Graph.h  HierarchyConstructor.h  Queue.h  Serialize.h
RoutingEngine/ContractionHierarchies/src/: BidirectionalSearch.cpp  Graph.cpp  HierarchyConstructor.cpp
RoutingEngine/Parsing/: CMakeLists.txt
RoutingEngine/Parsing/include/: OsmParser.h  Weighting.h
RoutingEngine/Parsing/src/: OsmParser.cpp  Weighting.cpp
benchmark/: CMakeLists.txt  benchmark.h
benchmark/src/: benchmark.cpp
bindings/: CMakeLists.txt
bindings/src/: bindings.cpp
examples/: BasicUsage.cpp  CMakeLists.txt  example1.cpp
include/: CppRoutingEngine.h  benchmark.h  bidirectionalSearch.h  graph.h  hierarchyConstructor.h  osmParser.h  queue.h  serialize.h  tests.h  weighting.h
src/: CMakeLists.txt  bidirectionalSearch.cpp  graph.cpp  hierarchyConstructor.cpp  main.cpp  osmParser.cpp  queue.cpp  serialize.cpp  weighting.cpp
src/ContractionHierarchies/: BidirectionalSearch.cpp  CMakeLists.txt  Graph.cpp  HierarchyConstructor.cpp  OsmParser.cpp  bidirectionalSearch.cpp  graph.cpp  hierarchyConstructor.cpp  osmParser.cpp  queue.cpp  weighting.cpp
src/ContractionHierarchies/include/: BidirectionalSearch.h  Graph.h  HierarchyConstructor.h  OsmParser.h  Queue.h  Serialize.h  Weighting.h  bidirectionalSearch.h  graph.h  hierarchyConstructor.h  osmParser.h  queue.h  serialize.h  weighting.h
src/ContractionHierarchies/src/: BidirectionalSearch.cpp  Graph.cpp  HierarchyConstructor.cpp  OsmParser.cpp  Weighting.cpp
src/RoutingEngine/: CMakeLists.txt  bidirectionalSearch.cpp  hierarchyConstructor.cpp  queue.cpp  serialize.cpp  weighting.cpp
src/Serialization/: CMakeLists.txt
tests/: CMakeLists.txt  benchmark.cpp  tests.cpp
tests/inputs/: test_input2.osm
tests/src/: test.cpp  test_input1.osm
