cmake_minimum_required(VERSION 3.8)
project(RoutingEngine)
add_subdirectory(ContractionHierarchies)
add_subdirectory(Parsing)
set(SOURCE_FILES RoutingEngine.cpp)
set(STATIC_LIBRARIES ContractionHierarchies Parsing)
add_library(RoutingEngine ${SOURCE_FILES})
target_link_libraries(RoutingEngine PUBLIC ${STATIC_LIBRARIES})
target_include_directories(RoutingEngine PUBLIC ${PARSING_HEADERS_DIR} ${CH_HEADERS_DIR})
install(TARGETS RoutingEngine DESTINATION ${ENGINE_INSTALL_LIB_DIR})
install(FILES RoutingEngine.h DESTINATION ${ENGINE_HEADERS_DIR})